...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.NoteActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/noteTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter your Title"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/noteBodyText"
        app:layout_constraintEnd_toEndOf="@+id/noteBodyText"
        app:layout_constraintStart_toStartOf="@+id/noteBodyText" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
...
