<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.activities.NoteActivity">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        android:title="Back"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_arrow_forward_white_24dp"
        android:title="Next"
        app:showAsAction="ifRoom|withText" />
</menu>
